WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271029
FindString should not be sent twice if a webpage has no iframe processes
https://bugs.webkit.org/show_bug.cgi?id=271029
Summary
FindString should not be sent twice if a webpage has no iframe processes
Charlie Wolfe
Reported
2024-03-14 18:45:27 PDT
Sending two FindString IPC messages in this case adds unnecessary latency.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-14 18:46:16 PDT
<
rdar://problem/124652108
>
Charlie Wolfe
Comment 2
2024-04-11 21:19:52 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27181
EWS
Comment 3
2024-04-14 14:31:56 PDT
Committed
277474@main
(292927b97664): <
https://commits.webkit.org/277474@main
> Reviewed commits have been landed. Closing PR #27181 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug