FindString should not be sent twice if a webpage has no iframe processes https://bugs.webkit.org/show_bug.cgi?id=271029 rdar://124652108

Reviewed by Alex Christensen.

With site isolation, we need to search all web processes initially without setting selection because we
do not know which frame should receive selection until we know which frames have matches. If a webpage
has no iframe processes, or site isolation is disabled, we don’t need to do this because we can
synchronously search all frames in the web process. So we should just send one FindString message in
this situation.

* Source/WebKit/UIProcess/BrowsingContextGroup.cpp:
(WebKit::BrowsingContextGroup::hasRemotePages):
* Source/WebKit/UIProcess/BrowsingContextGroup.h:
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::findString):

Canonical link: https://commits.webkit.org/277474@main